--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-stringcase
+aniso8601==8.0.0
+attrs==19.3.0
 beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 Flask==1.1.1
 Flask-Cors==3.0.8
+flask-restplus==0.13.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
+jsonschema==3.2.0
 MarkupSafe==1.1.1
+pyrsistent==0.16.0
 pyshorteners==1.0.0
+python-dotenv==0.13.0
+pytz==2020.1
 requests==2.23.0
 six==1.14.0
 soupsieve==2.0
+stringcase==1.2.0
 urllib3==1.25.8
 Werkzeug==1.0.0
